# context-managed-singleton

./: .gitignore  README.md  pyproject.toml
context_managed_data_structures/: __init__.py
tests/: __init__.py
